temp/partner-api/ing.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: $KYML_APP_NAME-redirect
  namespace: $KYML_NAMESPACE
spec:
  parentRefs:
  - name: external-gateway
    namespace: default
    sectionName: http
  hostnames:
  - $KYML_ING_DOMAIN
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: $KYML_APP_NAME
  namespace: $KYML_NAMESPACE
spec:
  parentRefs:
  - name: external-gateway
    namespace: default
    sectionName: https
  hostnames:
  - $KYML_ING_DOMAIN
  rules:
  - backendRefs:
    - name: $KYML_APP_NAME
      port: $KYML_HTTP_PORT_NUMBER
